# howlongtobeat-oracle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
hltb_oracle/: __init__.py  main.py  models.py  parser.py  website.py
howlongtobeat_oracle/: __init__.py  main.py  models.py  parser.py  website.py
tests/: test_hltb_oracle.py  test_howlongtobeat_oracle.py  test_main.py
